--- a/app/globals.css
+++ b/app/globals.css
@@ -49,8 +49,13 @@
   font-size: 16px !important;
 }
 
+  html,
   body {
-    color: hsl(var(--foreground-hsl));
+    background: #020617;
+    color: #e2e8f0;
+  }
+
+  body {
     font-feature-settings: "rlig" 1, "calt" 1;
   }
 
